infrastructure/dev-k8s-terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

module "iam" {
  source = "./modules/IAM"
}

variable "sec-gr-mutual" {
  default = "petclinic-k8s-mutual-sec-group"
}

variable "sec-gr-k8s-master" {
  default = "petclinic-k8s-master-sec-group"
}

variable "sec-gr-k8s-worker" {
  default = "petclinic-k8s-worker-sec-group"
}

data "aws_vpc" "name" {
  default = true
}

resource "aws_security_group" "petclinic-mutual-sg" {
  name   = var.sec-gr-mutual
  vpc_id = data.aws_vpc.name.id
}

resource "aws_security_group" "petclinic-kube-worker-sg" {
  name   = var.sec-gr-k8s-worker
  vpc_id = data.aws_vpc.name.id

  ingress {
    protocol        = "tcp"
    from_port       = 10250
    to_port         = 10250
    security_groups = [aws_security_group.petclinic-mutual-sg.id]
  }
  ingress {
    protocol    = "tcp"
    from_port   = 30000
    to_port     = 32767
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol        = "udp"
    from_port       = 8472
    to_port         = 8472
    security_groups = [aws_security_group.petclinic-mutual-sg.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name                                     = "kube-worker-secgroup"
    "kubernetes.io/cluster/petclinicCluster" = "owned"
  }
}

resource "aws_security_group" "petclinic-kube-master-sg" {
  name   = var.sec-gr-k8s-master
  vpc_id = data.aws_vpc.name.id

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol    = "tcp"
    from_port   = 6443
    to_port     = 6443
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol        = "tcp"
    from_port       = 2380
    to_port         = 2380
    security_groups = [aws_security_group.petclinic-mutual-sg.id]
  }
  ingress {
    protocol        = "tcp"
    from_port       = 2379
    to_port         = 2379
    security_groups = [aws_security_group.petclinic-mutual-sg.id]
  }
  ingress {
    protocol        = "tcp"
    from_port       = 10250
    to_port         = 10250
    security_groups = [aws_security_group.petclinic-mutual-sg.id]
  }
  ingress {
    protocol  = "tcp"
    from_port = 10257
    to_port   = 10257
    self      = true
  }
  ingress {
    protocol  = "tcp"
    from_port = 10259
    to_port   = 10259
    self      = true
  }
  ingress {
    protocol    = "tcp"
    from_port   = 30000
    to_port     = 32767
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol        = "udp"
    from_port       = 8472
    to_port         = 8472
    security_groups = [aws_security_group.petclinic-mutual-sg.id]
  }
  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "kube-master-secgroup"
  }
}

resource "aws_instance" "kube-master" {
  ami                    = "ami-013f17f36f8b1fefb"
  instance_type          = "t3a.medium"
  iam_instance_profile   = module.iam.master_profile_name
  vpc_security_group_ids = [aws_security_group.petclinic-kube-master-sg.id, aws_security_group.petclinic-mutual-sg.id]
  key_name               = "clarus"
  subnet_id              = "subnet-01b68b2aae8a882af" # select own subnet_id of us-east-1a
  availability_zone      = "us-east-1a"
  tags = {
    Name                                     = "kube-master"
    "kubernetes.io/cluster/petclinicCluster" = "owned"
    Project                                  = "tera-kube-ans"
    Role                                     = "master"
    Id                                       = "1"
    environment                              = "dev"
  }
}

resource "aws_instance" "worker-1" {
  ami                    = "ami-013f17f36f8b1fefb"
  instance_type          = "t3a.medium"
  iam_instance_profile   = module.iam.worker_profile_name
  vpc_security_group_ids = [aws_security_group.petclinic-kube-worker-sg.id, aws_security_group.petclinic-mutual-sg.id]
  key_name               = "clarus"
  subnet_id              = "subnet-01b68b2aae8a882af" # select own subnet_id of us-east-1a
  availability_zone      = "us-east-1a"
  tags = {
    Name                                     = "worker-1"
    "kubernetes.io/cluster/petclinicCluster" = "owned"
    Project                                  = "tera-kube-ans"
    Role                                     = "worker"
    Id                                       = "1"
    environment                              = "dev"
  }
}

resource "aws_instance" "worker-2" {
  ami                    = "ami-013f17f36f8b1fefb"
  instance_type          = "t3a.medium"
  iam_instance_profile   = module.iam.worker_profile_name
  vpc_security_group_ids = [aws_security_group.petclinic-kube-worker-sg.id, aws_security_group.petclinic-mutual-sg.id]
  key_name               = "clarus"
  subnet_id              = "subnet-01b68b2aae8a882af" # select own subnet_id of us-east-1a
  availability_zone      = "us-east-1a"
  tags = {
    Name                                     = "worker-2"
    "kubernetes.io/cluster/petclinicCluster" = "owned"
    Project                                  = "tera-kube-ans"
    Role                                     = "worker"
    Id                                       = "2"
    environment                              = "dev"
  }
}

output "kube-master-ip" {
  value       = aws_instance.kube-master.public_ip
  sensitive   = false
  description = "public ip of the kube-master"
}

output "worker-1-ip" {
  value       = aws_instance.worker-1.public_ip
  sensitive   = false
  description = "public ip of the worker-1"
}

output "worker-2-ip" {
  value       = aws_instance.worker-2.public_ip
  sensitive   = false
  description = "public ip of the worker-2"
}
